# job-intel-assistant

./: .dockerignore  .env.airflow.example  .env.example  .gitignore  README.md  docker-compose.airflow.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/: .env.example  Dockerfile  README.md  docker-compose.yml
airflow/dags/: job_intel_daily.py
data/: sample_jobs.csv
docs/: airflow.md  architecture.md  ngrok.md  roadmap.md  telegram.md
examples/: resume.txt
reports/: match_report.md  sample_match_report.md
src/job_intel/: __main__.py  api.py  cli.py  config.py  db.py  history.py  importer.py  job_filters.py  llm.py  matcher.py  pipeline.py  report.py  schemas.py  services.py  skills.py  telegram.py
src/job_intel/agent/: __init__.py  planner.py  tool_loop.py
src/job_intel/api/: __init__.py  app.py  dependencies.py  schemas.py
src/job_intel/application/: __init__.py  services.py
src/job_intel/cli/: __init__.py  app.py
src/job_intel/core/: __init__.py  job_filters.py  matcher.py  models.py  resume.py
src/job_intel/crawlers/: __init__.py  all_sources.py  arbeitnow.py  base.py  cake.py  contact_taiwan.py  himalayas.py  job104.py  registry.py  remoteok.py  remotive.py  sample.py  taiwan.py  taiwanjobs.py  utils.py  yourator.py
src/job_intel/db/: __init__.py  models.py  (+5 more)
tests/: test_crawler_utils.py  test_db_feedback.py  test_db_history.py  test_db_importer.py  test_db_notifications.py  test_matcher.py  test_resume.py
web/: index.html  package-lock.json  package.json
web/assets/: app.js  styles.css
web/src/: App.jsx  constants.js  styles.css
(+21 files in other folders)
